<resources>
    <string name="app_name">Donasi Pendidikan</string>

    <string name="periksa_koneksi">Periksa koneksi internet anda</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>

    <string name="cari">Cari</string>
    <string name="kata_kunci">Kata Kunci</string>

    <string name="data_pengeluaran">Pengeluaran Dana : </string>

    <string name="info_penggalang">Penggalang Dana</string>
    <string name="hari_lagi">Hari Lagi</string>
    <string name="teks_target">Target :</string>
    <string name="teks_terkumpul">Terkumpul :</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="selesai">Penggalangan dana ini telah selesai dilakukan, silahkan memberi donasi pada penggalangan dana lain</string>

    <string name="pengajuan_perpanjangan">Pengajuan Perpanjangan</string>
    <string name="alasan_perpanjangan">Alasan Perpanjangan</string>
    <string name="bisa_perpanjang">Penggalangan dana telah melebihi batas waktu, namun target belum terpenuhi. Anda bisa mengajukan perpanjangan</string>
    <string name="tidak_bisa_perpanjang">Penggalangan dana telah melebihi batas waktu dan target sudah terpenuhi. Perpanjangan tidak bisa diajukan dan tidak bisa menerima donasi lagi</string>
    <string name="verif_perpanjangan">Silahkan tunggu verifikasi kelayakan perpanjangan penggalangan dana</string>
    <string name="diterima_perpanjangan">Pengajuan perpanjangan diterima. Batas waktu penggalangan dana ditambah</string>
    <string name="ditolak_perpanjangan">Pengajuan perpanjangan ditolak. Penggalangan dana telah selesai dan tidak bisa menerima donasi lagi</string>

    <string name="galang_dana">Galang Dana</string>
    <string name="donasi_masuk">Donasi Masuk</string>
    <string name="iv_description">Gambar Donasi</string>
    <string name="silahkan_login">Silahkan login atau registrasi</string>
    <string name="silahkan_login_akun">Menu ini bisa diakses oleh user yang sudah registrasi. Silahkan login atau registrasi di menu akun</string>
    <string name="login">Login</string>
    <string name="registrasi">Registrasi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="beri_donasi">Beri Donasi</string>
    <string name="kirim_donasi">Kirim donasi ke nomor rekening berikut :</string>
    <string name="nama_donatur">Nama pemilik rekening</string>
    <string name="jumlah_donasi">Jumlah Donasi</string>
    <string name="no_hp_donatur">No HP Donatur</string>
    <string name="anonim">Beri donasi sebagai anonim</string>
    <string name="bukti_transfer">Bukti Transfer</string>
    <string name="button_bukti">Upload bukti transfer</string>
    <string name="submit">Submit</string>

    <string name="buat_konten">Ajukan Konten Penggalangan Dana</string>
    <string name="judul_konten">Judul</string>
    <string name="deskripsi_konten">Deskripsi</string>
    <string name="target">Target Dana</string>
    <string name="lama_donasi">Lama Donasi</string>
    <string name="norek_penerima">Nomor Rekening Penerima Donasi</string>
    <string name="button_upload">Upload gambar donasi</string>
    <string name="gambar">Gambar</string>Jumlah Donasi Masuk :

    <string name="jumlah_donasi_masuk">Jumlah Donasi Masuk :</string>
    <string name="jumlah_donatur">Jumlah Donatur :</string>
    <string name="ket_denasi_masuk">Daftar donasi masuk yang belum divalidasi. Pilih salah satu untuk menerima atau menolak validasi</string>
    <string name="is_anonim">(Anonim)</string>

    <string name="konfirmasi">Konfirmasi</string>
    <string name="tolak_donasi">Apakah bukti transfer tidak sesuai? Validasi donatur akan ditolak</string>

    <string-array name="spinner_lama_donasi">
        <item>Jumlah hari penggalangan dana</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
        <item>210</item>
    </string-array>

    <string-array name="spinner_perpanjangan">
        <item>Jumlah hari perpanjangan</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
    </string-array>

    <string-array name="spinner_bank">
        <item>Pilih Nama Bank</item>
        <item>BRI</item>
        <item>Bank Mandiri</item>
        <item>BCA</item>
        <item>BNI</item>
        <item>BTN</item>
        <item>Bank CIMB Niaga</item>
        <item>Bank Panin</item>
        <item>Bank OCBC</item>
        <item>Maybank</item>
        <item>Bank Danamon</item>
        <item>Bank Permata</item>
        <item>Bank Mega</item>
        <item>Lainnya</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_foto_opsional">Upload Foto (Opsional)</string>
    <string name="alamat">Alamat</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No HP</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="upload_foto_ktp">Upload Foto KTP</string>
    <string name="ajukan_perpanjangan">Ajukan Perpanjangan</string>
    <string name="nama">Nama :</string>
    <string name="penggalang_dana">Penggalang Dana</string>
    <string name="no_hp_">No HP :</string>
    <string name="lampirkan_bukti">Lampirkan bukti transfer berupa foto atau screenshot untuk menunjang validasi pemberian donasi</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nama_bank_tujuan">Nama Bank Tujuan :</string>
    <string name="tambah_perkembangan">Tambah Perkembangan</string>
    <string name="perkembangan">Perkembangan</string>
    <string name="terkumpul">Terkumpul</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="username_dan_password_untuk">Username dan password untuk masuk ke akun anda jika verifikasi registrasi diterima</string>
    <string name="isikan_data_identitas">Isikan data identitas pribadi untuk menunjang verifikasi registrasi</string>
    <string name="memberi_donasi">Memberi donasi</string>
    <string name="urutkan">Urutkan</string>
    <string name="terbanyak">Terbanyak</string>
    <string name="terbaru">Terbaru</string>
    <string name="logout">Logout</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="pengeluaran_dana">Pengeluaran Dana : </string>
    <string name="rincian_pengeluaran">Rincian pengeluaran : </string>
    <string name="tujuan_transfer">Tujuan transfer donasi dari donatur</string>
    <string name="isikan_informasi_konten">Isikan informasi konten penggalangan dana yang ingin diajukan</string>
    <string name="menambahkan_berita">Menambahkan berita terbaru terkait penggalangan dana</string>
    <string name="menambahkan_pengeluaran">Penggunaan dana yang terkumpul dari donatur</string>

    <string name="judul_full">Judul : %1$s </string>
    <string name="nama_full">Nama Donatur : %1$s </string>
    <string name="jumlah_full">Jumlah Donasi : %1$s </string>
    <string name="nohp_full">No HP donatur : %1$s </string>
    <string name="info_baru">Info Baru</string>
    <string name="semua">Semua</string>
    <string name="galang_dana_sekarang">Galang Dana Sekarang</string>
    <string name="jumlah_pengeluaran">Jumlah pengeluaran</string>
    <string name="penggunaan_dana">Penggunaan Dana</string>
</resources>
