<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nama_lengkap"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/belumauth"
            android:text="@string/silahkan_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/login"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/registrasi"/>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/logout"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>