<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ProgressBar
        android:id="@+id/progBar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:text="@string/kirim_donasi"
                    android:textAppearance="@style/textstyle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/norek"
                    android:layout_marginTop="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tool:text="2134124" />

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/atas_nama"
                        android:textAppearance="@style/textstyle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/atasnama"
                        tool:text="Pamungkas Aji"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@style/textstyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/nama_bank_tujuan"
                        android:textAppearance="@style/textstyle3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/bank"
                        tool:text="Bank BRI"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@style/textstyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_jumlah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/jumlah_donasi"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_nohp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/no_hp_donatur"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/nama_donatur"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/anonim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonim"
                    android:textAppearance="@style/textstyle3"
                    android:padding="10dp"
                    android:checked="false"/>

                <TextView
                    android:text="@string/lampirkan_bukti"
                    android:textAlignment="center"
                    android:textAppearance="@style/textstyle3"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/gambar"
                    android:src="@drawable/ic_image_black_70dp"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/gambar"/>

                <Button
                    android:id="@+id/buttonChoose"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/button_bukti"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/colorPrimary"
                    style="?attr/materialButtonOutlinedStyle"/>

                <Button
                    android:id="@+id/buttonUpload"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/submit" />

            </LinearLayout>

    </ScrollView>

</RelativeLayout>